Fixed problem with checkboxes shifting on page load.

--- a/src/app/assets/scss/partials/_forms.scss
+++ b/src/app/assets/scss/partials/_forms.scss
@@ -23,6 +23,8 @@
 
 			color: $gray-lighter;
 			content: $fa-var-square;
+			display: inline-block;
+			width: 12px;
 			margin-right: 5px;
 			position: relative;
 			bottom: 1px;
